fix overlapping navbar and page-container

--- a/game.css
+++ b/game.css
@@ -62,7 +62,7 @@ nav ul li a:hover {
     align-items: center;
     height: 100vh;
     text-align: center;
-    margin-top: 0px;
+    margin-top: 100px;
     margin-bottom: 30px;
 }
 
